# DSource-AI

./: .env.example  .gitignore  CLAUDE.md  DATABASE_REFERENCE.md  DEPLOYMENT.md  NOTES.md  PRODUCTION-READINESS.md  README.md  ROADMAP.md  WORK-PLAN.md  alembic.ini  design.md  docker-compose.yml  memory.md  middleware.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  run.sh  vercel.json
.claude/rules/: frontend-style.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
backend/: requirements.txt
backend/app/: config.py  jobs.py  main.py  models.py
backend/scripts/: build_steelcase.py  harvest_seed.py
backend/tests/: test_alternatives.py  test_cad_reader.py  test_concept.py  test_detailed.py  test_embedder.py  test_harvest_store.py  test_jobs.py  test_layout_metrics.py  test_match_bands.py  test_match_results.py  test_payloads.py  test_raster_reader.py  test_render_prompt.py  test_room_merge.py  test_room_segment.py  test_settings.py  test_source.py  test_sqlitevec_index.py  (+1 more)
context-guides/: AUTHORIZATION_GUIDE.md
data/: taxonomy.yaml
docs/: floorplan-editor-spec.md  material-finder-roadmap.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
public/: ai-material-finder.avif  made-2.avif  made-3.avif  made-6.avif  made-7.avif  modern-minimalist-view-materials.avif  popular-3.avif  popular-5.avif
roadmap/: 01-workflow.md
scripts/: backfill-embeddings.mjs  browser_smoke.py  seed.py
src/: middleware.js
tests/: test_schema.py
(+368 files in other folders)
