[project]
name = "quarry"
version = "0.1.0"
description = "Quarry — digital product library: BOQ line -> ranked real products (resolver)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.7", "mypy>=1.13", "types-pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quarry"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/quarry/schema", "src/quarry/matching"]
plugins = ["pydantic.mypy"]
